welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: not found: value i
freq(i)=golomb(i)
     ^golomb:12: error: not found: value k
while (k != freq(i))
       ^golomb:13: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
golomb(i)=a
^golomb:15: error: type mismatch;
 found   : Unit
 required: Int
a += 1
  ^